<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:paddingBottom="16dp"
    android:orientation="vertical"
    android:background="@color/azul_gris"
    tools:context="com.dtarragol.mensajeator.MainActivity"
    android:screenOrientation="portrait">

    <LinearLayout
        android:layout_width="381dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/azul_oscuro"
            android:text="@string/btn_ver_agenda" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/button9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#8ABC44"
            android:onClick="btnMenuFav"
            android:text="@string/btn_contactos_favoritos" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <EditText
        android:id="@+id/et_nombre"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/claro"
        android:ems="10"
        android:hint="@string/hint_Nombre"
        android:inputType="text"
        android:textColor="@color/black"
        android:textColorHint="@color/marron" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <EditText
        android:id="@+id/et_numero"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/claro"
        android:ems="10"
        android:hint="@string/hint_numero"
        android:inputType="phone"
        android:textColor="@color/black"
        android:textColorHint="@color/marron" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <Button
        android:id="@+id/button10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#8ABC44"
        android:onClick="AgregarFav"
        android:text="@string/btn_agregar_contacto_favorito" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <LinearLayout
        android:layout_width="381dp"
        android:layout_height="68dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_wp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="btn_ir_mensajes"
            android:text="@string/btn_ir_wp"
            android:backgroundTint="@color/azul_oscuro"/>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btn_mensajes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/azul_oscuro"
            android:onClick="btnMenuMensajes"
            android:text="@string/btn_gestionar_mensajes" />
    </LinearLayout>

    <Button
        android:id="@+id/button7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/azul_oscuro"
        android:onClick="btnUsarMensajes"
        android:text="@string/btn_ir_mensajes" />

</LinearLayout>