<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:paddingBottom="16dp"
    android:background="@color/azul_gris"
    tools:context=".Activity_CrearMensaje">

    <LinearLayout
        android:id="@+id/botones_mensajes"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="0dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/marron"
            android:onClick="btnVolver"
            android:text="@string/btn_cancelar" />

        <Space
            android:layout_width="86dp"
            android:layout_height="51dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_weight="1"
            android:backgroundTint="@color/azul_oscuro"
            android:onClick="GuardarMensajeBD"
            android:text="@string/btn_enviar" />
    </LinearLayout>

    <EditText
        android:id="@+id/txt_nuevo_mensaje"
        android:layout_width="395dp"
        android:layout_height="491dp"
        android:layout_below="@+id/txt_nombre_mensaje"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="0dp"
        android:background="@color/claro"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/hint_nuevo_mensaje"
        android:inputType="textMultiLine"
        android:textColor="@color/black"
        android:textColorHint="@color/marron" />

    <EditText
        android:id="@+id/txt_nombre_mensaje"
        android:layout_width="395dp"
        android:layout_height="56dp"
        android:layout_below="@+id/botones_mensajes"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="33dp"
        android:background="@color/claro"
        android:ems="10"
        android:hint="@string/hint_nombre_nuevo_mensaje"
        android:inputType="text"
        android:textColor="@color/black"
        android:textColorHint="@color/marron" />

</RelativeLayout>