<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:paddingBottom="16dp"
    android:background="@color/azul_gris"
    tools:context=".Activity_CrearMensaje">

    <LinearLayout
        android:id="@+id/botones_mensajes"
        android:layout_width="381dp"
        android:layout_height="61dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="32dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="60dp"

            android:layout_marginBottom="67dp"
            android:layout_weight="1"
            android:backgroundTint="@color/marron"
            android:onClick="btnVolver"
            android:text="@string/btn_atras" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_alignParentEnd="true"
            android:layout_weight="1"
            android:backgroundTint="@color/azul_oscuro"
            android:onClick="btnMenuNuevoMensaje"
            android:text="@string/btn_nuevo" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/glay"
        android:layout_width="395dp"
        android:layout_height="451dp"
        android:layout_above="@+id/botones_mensajes2"
        android:layout_below="@+id/botones_mensajes"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="18dp"
        android:orientation="vertical">

    </LinearLayout>

    <LinearLayout
        android:id="@+id/botones_mensajes2"
        android:layout_width="395dp"
        android:layout_height="91dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="29dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_alignParentEnd="true"
            android:layout_weight="1"
            android:backgroundTint="@color/marron"
            android:onClick="borrarTodo"
            android:text="@string/btn_borrar_todo" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/button6"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:onClick="borrarSeleccionados"
            android:backgroundTint="@color/marron"
            android:text="@string/btn_borrar_seleccionados" />

    </LinearLayout>
</RelativeLayout>